--- a/settings.gradle
+++ b/settings.gradle
@@ -30,7 +30,7 @@ dependencyResolutionManagement {
         //jcenter()
     }
 }
-rootProject.name = "VideoPlayer"
+rootProject.name = "VideoCommon"
 include ':app'
 include ':module_common'
 include ':module_player'
