--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 
     dependencies {
         //hilt
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+        classpath rootProject.ext.dependencies.hilt_plugin
     }
 }
 
@@ -13,7 +13,6 @@ plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
-
 }
 
 task clean(type: Delete) {
