--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,10 @@ pluginManagement {
     repositories {
         maven {
             allowInsecureProtocol = true
-            url "http://140.82.23.227:8082/artifactory/android-warehouse/"
+            //内网私有代理仓库
+            url "http://192.168.2.204:8082/artifactory/android-local_repository/"
+            //国外私有代理仓库
+            //url "http://140.82.23.227:8082/artifactory/android-warehouse/"
             credentials {
                 username "admin"
                 password "Admin123456@"
@@ -18,7 +21,10 @@ dependencyResolutionManagement {
     repositories {
         maven {
             allowInsecureProtocol = true
-            url "http://140.82.23.227:8082/artifactory/android-warehouse/"
+            //内网私有代理仓库
+            url "http://192.168.2.204:8082/artifactory/android-local_repository/"
+            //国外私有代理仓库
+            //url "http://140.82.23.227:8082/artifactory/android-warehouse/"
             credentials {
                 username "admin"
                 password "Admin123456@"
