添加公用布局

--- a/module_common/build.gradle
+++ b/module_common/build.gradle
@@ -19,6 +19,13 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    //配置路由
+    kapt {
+        arguments {
+            arg("ROUTER_MODULE_NAME", project.getName())
+        }
+    }
+
     buildTypes {
         debug {
             minifyEnabled false
@@ -80,6 +87,7 @@ dependencies {
     api library.lifecycle
     api library.widget
     api library.router_api
+    kapt library.router_compiler
     api library.process_monitor
     api library.live_event_bus
     api library.xpopup
@@ -98,6 +106,11 @@ dependencies {
     api (library.permissions) {
         exclude group: 'com.android.support', module: 'support-fragment'
     }
+
+    api library.refresh_kernel
+    api library.refresh_classics
+
+    api library.tablayout_ext
 
     testImplementation library.java_junit
     androidTestImplementation library.android_junit
