--- a/config.gradle
+++ b/config.gradle
@@ -123,7 +123,12 @@ ext{
             //生成jsonadapter 插件
             moshi_compiler: "com.squareup.moshi:moshi-kotlin-codegen:1.13.0",
 
-            retrofit: "com.squareup.retrofit2:retrofit:2.6.4",
+            //刷新
+            refresh_kernel: "io.github.scwang90:refresh-layout-kernel:2.0.5",
+            refresh_classics: "io.github.scwang90:refresh-header-classics:2.0.5",
+
+            //tablayout扩展
+            tablayout_ext: "com.github.loperSeven:tablayout-ext:0.1.3",
 
             //java测试包
             java_junit: "junit:junit:4.13.2",
