--- a/module_common/build.gradle
+++ b/module_common/build.gradle
@@ -107,6 +107,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-fragment'
     }
 
+    api 'com.github.Kennyc1012:MultiStateView:2.2.0'
+
     api library.refresh_kernel
     api library.refresh_classics
 
