--- a/config.gradle
+++ b/config.gradle
@@ -42,6 +42,13 @@ ext{
     //版本号
     pom_version = "1.3.7"
 
+    //groupId
+    pom_ijk_groupId = "tv.danmaku.ijk.media.player"
+    //artifactId
+    pom_ijk_artifactId = "player"
+    //版本号
+    pom_ijk_version = "1.0.0"
+
     dependencies=[
             // gradle插件
             gradle_plugin: "com.android.tools.build:gradle:7.0.4",
